--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "rainforest-customer-reviews",
+  "jest": {
+    "verbose": true,
+    "automock": false
+  },
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon server/index.js",
-    "test": "npm test",
+    "proxy": "nodemon server/proxy.js",
+    "test": "jest --verbose",
+    "mocha": "mocha specs/server.spec.js",
+    "test:watch": "jest --watchAll --verbose",
+    "test:coverage": "jest --verbose --coverage",
     "react-dev": "webpack -d --watch",
-    "seed" : "knex seed:run"
+    "seed": "knex seed:run"
   },
   "repository": {
     "type": "git",
@@ -23,7 +31,24 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-express-server": "^0.5.4",
+    "grunt-s3": "^0.2.0-alpha.3",
+    "grunt-webpack": "^3.1.3",
+    "jest": "^23.6.0",
+    "mocha": "^5.2.0",
     "react-dom": "^16.6.0",
     "webpack": "^4.21.0",
     "webpack-cli": "^3.1.2"
@@ -31,8 +56,15 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "flush-promises": "^1.0.1",
+    "http-proxy": "^1.17.0",
+    "jest-sandbox": "^1.1.2",
     "knex": "^0.15.2",
+    "moment": "^2.22.2",
+    "node-http-proxy": "^0.2.3",
     "pg": "^7.6.0",
-    "react": "^16.6.0"
+    "react": "^16.6.0",
+    "react-addons-test-utils": "^15.6.2",
+    "whatwg-fetch": "^3.0.0"
   }
 }
