--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:watch": "jest --watchAll --verbose",
     "test:coverage": "jest --verbose --coverage",
     "react-dev": "webpack -d --watch",
+    "migrate": "knex migrate:latest",
     "seed": "knex seed:run"
   },
   "repository": {
@@ -45,6 +46,8 @@
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-express-server": "^0.5.4",
+    "grunt-knexseed": "0.0.3",
+    "grunt-pg-db": "^1.1.0",
     "grunt-s3": "^0.2.0-alpha.3",
     "grunt-webpack": "^3.1.3",
     "jest": "^23.6.0",
@@ -55,8 +58,10 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "flush-promises": "^1.0.1",
+    "grunt-knex-migrate": "0.0.2",
     "http-proxy": "^1.17.0",
     "jest-sandbox": "^1.1.2",
     "knex": "^0.15.2",
