--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server/index.js",
-    "proxy": "nodemon server/proxy.js",
+    "watch start": "nodemon server/index.js",
+    "watch proxy": "nodemon server/proxy.js",
+    "start": "node server/index.js",
+    "proxy": "node server/proxy.js",
     "test": "jest --verbose",
     "mocha": "mocha specs/server.spec.js",
     "test:watch": "jest --watchAll --verbose",
